fixed overlapping issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,10 +33,15 @@ p {
     color: $black;
 }
 
+.container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+
 // --------- SIDEBAR STYLING ---------
 .sidebar-container {
     display: flex;
-    float: left;
     width: 10vw;
     height: 100vh;
     z-index: 0;
@@ -44,16 +49,13 @@ p {
 
 .sidebar-content{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     rotate: -90deg;
-    width: 20rem;
-    margin-left: 70px;
-
 }
 
 .logo {
-    width: 10rem;
+    width: 100%;
 }
 
 // --------- NAVIGATION STYLING ---------
